[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/game_button/game_button.gd" type="Script" id=2]
[ext_resource path="res://components/game_button/game_button_theme.tres" type="Theme" id=4]

[node name="GameButton" type="Control"]
margin_right = 240.0
margin_bottom = 120.0
focus_mode = 2
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBanner" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLauncherIcon" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -40.0
margin_right = -96.0
margin_bottom = -8.0
focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGame" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlay" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -40.0
margin_right = -8.0
margin_bottom = -8.0
focus_mode = 1
theme = ExtResource( 4 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighlightLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 2, 2, 238, 2, 238, 118, 2, 118, 2, 2 )
width = 4.0
default_color = Color( 1, 0.501961, 0, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="pressed" from="ButtonBanner" to="." method="_on_ButtonBanner_pressed"]
[connection signal="pressed" from="ButtonLauncherIcon" to="." method="_on_ButtonLauncherIcon_pressed"]
[connection signal="focus_entered" from="ButtonPlay" to="." method="_on_focused"]
[connection signal="focus_exited" from="ButtonPlay" to="." method="_on_unfocused"]
[connection signal="pressed" from="ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
